# fastapi-poc

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  infrastructure.md  technology.md
further_development/: index.html
infrastructure/: index.html
search/: search_index.json
security/: index.html
src/: main.py
src/api/api_v0/endpoints/: projects.py
src/api/v0/: api.py
src/api/v0/endpoints/: projects.py  technologies.py
technology/: index.html
terraform/: main.tf  providers.tf  variables.tf
terraform/api_gateway/: cloudwatch.tf  data.tf  main.tf  variables.tf  waf.tf
terraform/env/dev/: backend-dev.tfbackend  dev.tfvars.txt
terraform/env/prod/: backend-prod.tfbackend
terraform/lambda/: data.tf  iam.tf  main.tf  networking.tf  outputs.tf  variables.tf
