[project]
name = "src"
version = "0.1.0"
description = "A FastAPI application."
authors = [
    {name = "Kieran Pritchard",email = "kieran.pritchard@ons.gov.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "mangum (>=0.19.0,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
